--- a/www/css/style9.css
+++ b/www/css/style9.css
@@ -537,6 +537,8 @@ input[type="checkbox"]:checked + label:before {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat; 
+    overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
 }
 /*.menu button:nth-child(2n){
     background-color: rgba(241, 241, 241, 0.92);
